config/internal-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-service-deployment
spec:
  selector:
    matchLabels:
      app: internal-service
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: internal-service
    spec:
      containers:
        - name: internal-service
          image: nikita99m/internal-service
          ports:
            - containerPort: 8090
