config/internal-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "internal-service.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: internal-service-service
                port:
                  number: 8080
